syntax = "proto3";

package infoSum.v1;

import "errors/errors.proto";
option go_package="github.com/asynccnu/ccnubox-be/be-api/gen/proto/infoSum/v1;infoSumv1";

enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;
     GET_INFOSUM_ERROR = 0 [(errors.code) = 501];
  DEL_INFOSUM_ERROR = 1 [(errors.code) = 502];
  SAVE_INFOSUM_ERROR = 2 [(errors.code) = 503];
}